components/41-organisms/footer/_footer.scss
// General footer styling.
footer.footer {
  .footer-top {
    @include theme('background-color', 'color-primary--lighten-5', 'footer-background-color');

    width: calc(100% + 2 * #{$gutter-width});
    margin-right: -$gutter-width;
    margin-left: -$gutter-width;

    > .content-container {
      display: flex;
      flex-wrap: wrap;
      margin-bottom: 1rem;
      padding: 0 $gutter-width 1.5rem;

      @include tablet {
        padding-top: 4rem;
        padding-bottom: 4rem;
      }

      @media (min-width: $bp-max-content) {
        padding: 4rem 0;
      }
    }

    .footer--column {
      width: 100%;

      @include tablet {
        flex: 1 0 auto;
        order: 1;
        width: span(2 of 12);
      }

      &:nth-of-type(3) {
        display: flex;

        @include tablet {
          justify-content: center;
        }

        @include desktop {
          width: span(2 of 12);
        }
      }

      &:first-of-type {
        width: 100%;

        @include tablet {
          order: 3;
          width: span(6 of 12);
        }

        @include desktop {
          width: span(7 of 12);
        }
      }
    }
  }

  .footer-bottom {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: .8rem;
    overflow: hidden;

    @include tablet {
      flex-wrap: nowrap;
    }

    .footer--column {
      width: 100%;
      line-height: 1rem;

      // Left column.
      &:first-child {
        order: 2;

        @include tablet {
          order: 1;
          width: span(4 of 12);
        }
      }

      // Right column.
      &:last-child {
        order: 1;
        margin-bottom: 1.8rem;

        @include tablet {
          order: 2;
          width: span(8 of 12);
        }

        @include desktop {
          width: span(6 of 12);
        }
      }
    }
  }

  .dg-block-post-address,
  .dg-block-disclaimer {
    margin-top: 2.2rem;
    margin-left: 1.2rem;

    @include tablet {
      margin-left: 0;
    }
  }

  .db-block-partnership {
    justify-content: center;
    width: 100%;
    min-height: 2rem;

    @include tablet {
      justify-content: start;
    }
  }

  ///
  /// External links other than group Ghent get an indicator.
  ///
  a {
    &[href^="http://"],
    &[href^="https://"] {
      &[href*="stad.gent"]::after {
        display: none;
      }
    }
  }
}

